--- a/app/src/main/res/layout/activity_tag_group.xml
+++ b/app/src/main/res/layout/activity_tag_group.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tag_view_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:max_lines="1">
+        app:flowlayout_max_lines="1">
 
     </com.wangjj.library.widget.TagViewLayout>
 
